--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head.ejs') %> 
+<%- include('./partials/head.ejs') %>
 <body>
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #8EA7E9;">
-  <a class="navbar-brand" href="#">Image/Text Repository</a>
+  <a class="navbar-brand" href="#">File Repository</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
