--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head.ejs') %> 
+<%- include('./partials/head.ejs') %>
 <body>
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #8EA7E9;">
-        <a class="navbar-brand" href="#">Image/Text Repository</a>
+        <a class="navbar-brand" href="#">File Repository</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <a href="/"><button type="button" class="btn btn-light">Go Back</button></a>    
+            <a href="/"><button type="button" class="btn btn-light">Go Back</button></a>
           </span>
         </div>
       </nav>
@@ -42,7 +42,7 @@
         </div>
         <% if(alreadyExists) { %>
           <p class="alertText">username already taken!</p>
-        <% } %>  
+        <% } %>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password" name="password" required>
@@ -53,14 +53,14 @@
         </div>
         <% if(passwordMismatch) { %>
           <p class="alertText">password didn't match!!</p>
-        <% } %> 
+        <% } %>
 
         <button type="submit" class="btn btn-success">Create Account</button>
       </form>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>   
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
     <% if(alreadyExists || passwordMismatch) { %>
       <script>
         $("#firstName").attr("value","<%= firstName%>");
@@ -71,6 +71,6 @@
       <script>
         $("#userName").attr("value","<%= userName%>");
       </script>
-    <% } %>  
+    <% } %>
 </body>
 </html>
